@@ -9,6 +9,7 @@ http://sourceforge.net/tracker/?group_id=260863
 Open Search Server 1.2
 
 New features:
+- 3103055: Convert HTML entities
 - 3087916: Upgrade to PDFBox 1.2
 - 3043692: Torrent Parser
 - 3042488: Audio parser
